--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
 									<span class="input-group-text"><i class="fa fa-briefcase"></i></span>
 								</div>
 								<select class="form-control" id="chucvu">
-									<option value="">Chọn chức vụ</option>
-									<option value="Sếp">Sếp</option>
-									<option value="Trưởng phòng">Trưởng phòng</option>
-									<option value="Nhân viên">Nhân viên</option>
+									<option value="0">Chọn chức vụ</option>
+									<option value="1">Sếp</option>
+									<option value="2">Trưởng phòng</option>
+									<option value="3">Nhân viên</option>
 								</select>
 							</div>
 
