--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 									<span class="input-group-text"><i class="fa fa-briefcase"></i></span>
 								</div>
 								<select class="form-control" id="chucvu">
-									<option value="0">Chọn chức vụ</option>
+									<option selected value="0">Chọn chức vụ</option>
 									<option value="1">Sếp</option>
 									<option value="2">Trưởng phòng</option>
 									<option value="3">Nhân viên</option>
